# readonly

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: args.rs  expand.rs  lib.rs
tests/: compiletest.rs  readme.rs
tests/ui/: enum.rs  enum.stderr  readme.rs  readme.stderr  readonly-meta.rs  readonly-meta.stderr  unit-struct.rs  unit-struct.stderr
