[package]
name = "readonly"
version = "0.2.6"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns", "no-std"]
description = "Struct fields that are made read-only accessible to other modules"
documentation = "https://docs.rs/readonly"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/readonly"
rust-version = "1.56"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.1", features = ["visit-mut"] }

[dev-dependencies]
rustversion = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
