[package]
name = "readonly"
version = "0.2.13"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]
description = "Struct fields that are made read-only accessible to other modules"
documentation = "https://docs.rs/readonly"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/readonly"
rust-version = "1.61"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.74"
quote = "1.0.35"
syn = { version = "2.0.46", features = ["visit-mut"] }

[dev-dependencies]
rustversion = "1.0.13"
trybuild = { version = "1.0.108", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
    "--extern-html-root-url=proc_macro=https://doc.rust-lang.org",
]
